refactor: re-write commit searching (part 2)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -504,7 +504,7 @@
                  Margin="0,8,0,0"
                  ItemsSource="{Binding SearchedCommits}"
                  SelectionMode="Single"
-                 SelectedItem="{Binding SearchResultSelectedCommit, Mode=TwoWay}"
+                 SelectedItem="{Binding SelectedSearchedCommit, Mode=TwoWay}"
                  BorderThickness="1"
                  BorderBrush="{DynamicResource Brush.Border2}"
                  Background="{DynamicResource Brush.Contents}"
