--- a/src/Views/RenameBranch.axaml
+++ b/src/Views/RenameBranch.axaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:SourceGit.ViewModels"
              xmlns:v="using:SourceGit.Views"
+             xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.RenameBranch"
              x:DataType="vm:RenameBranch">
@@ -11,7 +12,7 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.RenameBranch}"/>
-    <Grid Margin="0,16,0,0" RowDefinitions="32,32" ColumnDefinitions="120,*">
+    <Grid Margin="0,16,0,0" RowDefinitions="32,32,Auto" ColumnDefinitions="120,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
@@ -32,6 +33,13 @@
                Text="{Binding Name, Mode=TwoWay}"
                Watermark="{DynamicResource Text.RenameBranch.Name.Placeholder}"
                v:AutoFocusBehaviour.IsEnabled="True"/>
+
+      <StackPanel Grid.Row="2" Grid.Column="1"
+                  Orientation="Horizontal"
+                  IsVisible="{Binding Name, Converter={x:Static c:StringConverters.ContainsSpaces}}">
+        <Path Width="10" Height="10" Data="{StaticResource Icons.Error}" Fill="DarkOrange"/>
+        <TextBlock Classes="small" Text="{DynamicResource Text.CreateBranch.Name.WarnSpace}" Margin="4,0,0,0"/>
+      </StackPanel>
     </Grid>
   </StackPanel>
 </UserControl>
