--- a/src/Views/CheckoutCommit.axaml
+++ b/src/Views/CheckoutCommit.axaml
@@ -30,16 +30,16 @@
       <StackPanel Grid.Row="1" Grid.Column="1" Height="32" Orientation="Horizontal">
         <RadioButton Content="{DynamicResource Text.Checkout.LocalChanges.StashAndReply}"
                      GroupName="LocalChanges"
-                     IsChecked="{Binding AutoStash, Mode=TwoWay}" />
+                     Margin="0,0,8,0"
+                     IsChecked="{Binding !DiscardLocalChanges, Mode=TwoWay}"/>
         <RadioButton Content="{DynamicResource Text.Checkout.LocalChanges.Discard}"
-                     GroupName="LocalChanges"
-                     Margin="8,0,0,0" />
+                     GroupName="LocalChanges"/>
       </StackPanel>
 
       <Grid Grid.Row="2" Grid.Column="1" ColumnDefinitions="Auto,*" Margin="0,6,0,0">
-        <Path Grid.Column="0" 
-              Width="14" Height="14" 
-              Data="{StaticResource Icons.Error}" 
+        <Path Grid.Column="0"
+              Width="14" Height="14"
+              Data="{StaticResource Icons.Error}"
               Fill="DarkOrange"/>
         <TextBlock Grid.Column="1" Margin="8,0,0,0"
                    Text="{DynamicResource Text.Checkout.Commit.Warning}"
