--- a/src/Views/Pull.axaml
+++ b/src/Views/Pull.axaml
@@ -22,7 +22,7 @@
         <RowDefinition Height="32"/>
         <RowDefinition Height="32"/>
       </Grid.RowDefinitions>
-      
+
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
@@ -84,22 +84,14 @@
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.Pull.LocalChanges}"/>
       <WrapPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
-        <RadioButton Content="{DynamicResource Text.Pull.LocalChanges.DoNothing}"
-                     x:Name="RadioDoNothing"
+        <RadioButton GroupName="LocalChanges"
                      Margin="0,0,8,0"
-                     GroupName="LocalChanges"
-                     IsCheckedChanged="OnLocalChangeActionIsCheckedChanged"/>
-        <RadioButton Content="{DynamicResource Text.Pull.LocalChanges.StashAndReply}"
-                     x:Name="RadioStashAndReply"
-                     Margin="0,0,8,0"
-                     GroupName="LocalChanges"
-                     IsCheckedChanged="OnLocalChangeActionIsCheckedChanged"/>
-        <RadioButton Content="{DynamicResource Text.Pull.LocalChanges.Discard}"
-                     x:Name="RadioDiscard"
-                     GroupName="LocalChanges"
-                     IsCheckedChanged="OnLocalChangeActionIsCheckedChanged"/>
+                     Content="{DynamicResource Text.Pull.LocalChanges.StashAndReply}"
+                     IsChecked="{Binding !DiscardLocalChanges, Mode=TwoWay}"/>
+        <RadioButton GroupName="LocalChanges"
+                     Content="{DynamicResource Text.Pull.LocalChanges.Discard}"/>
       </WrapPanel>
-      
+
       <CheckBox Grid.Row="4" Grid.Column="1"
                 Content="{DynamicResource Text.Pull.FetchAllBranches}"
                 IsChecked="{Binding FetchAllBranches, Mode=TwoWay}"/>
