--- a/src/Resources/Locales/fr_FR.axaml
+++ b/src/Resources/Locales/fr_FR.axaml
@@ -422,6 +422,7 @@
   <x:String x:Key="Text.Paste" xml:space="preserve">Coller</x:String>
   <x:String x:Key="Text.Period.JustNow" xml:space="preserve">A l'instant</x:String>
   <x:String x:Key="Text.Period.MinutesAgo" xml:space="preserve">il y a {0} minutes</x:String>
+  <x:String x:Key="Text.Period.HourAgo" xml:space="preserve">il y a 1 heure</x:String>
   <x:String x:Key="Text.Period.HoursAgo" xml:space="preserve">il y a {0} heures</x:String>
   <x:String x:Key="Text.Period.Yesterday" xml:space="preserve">Hier</x:String>
   <x:String x:Key="Text.Period.DaysAgo" xml:space="preserve">il y a {0} jours</x:String>
