--- a/src/Resources/Locales/pt_BR.axaml
+++ b/src/Resources/Locales/pt_BR.axaml
@@ -435,6 +435,7 @@
   <x:String x:Key="Text.Paste" xml:space="preserve">Colar</x:String>
   <x:String x:Key="Text.Period.JustNow" xml:space="preserve">Agora mesmo</x:String>
   <x:String x:Key="Text.Period.MinutesAgo" xml:space="preserve">{0} minutos atrás</x:String>
+  <x:String x:Key="Text.Period.HourAgo" xml:space="preserve">1 hora atrás</x:String>
   <x:String x:Key="Text.Period.HoursAgo" xml:space="preserve">{0} horas atrás</x:String>
   <x:String x:Key="Text.Period.Yesterday" xml:space="preserve">Ontem</x:String>
   <x:String x:Key="Text.Period.DaysAgo" xml:space="preserve">{0} dias atrás</x:String>
