--- a/src/Resources/Locales/ru_RU.axaml
+++ b/src/Resources/Locales/ru_RU.axaml
@@ -448,6 +448,7 @@
   <x:String x:Key="Text.Paste" xml:space="preserve">Вставить</x:String>
   <x:String x:Key="Text.Period.JustNow" xml:space="preserve">Сейчас</x:String>
   <x:String x:Key="Text.Period.MinutesAgo" xml:space="preserve">{0} минут назад</x:String>
+  <x:String x:Key="Text.Period.HourAgo" xml:space="preserve">1 час назад</x:String>
   <x:String x:Key="Text.Period.HoursAgo" xml:space="preserve">{0} часов назад</x:String>
   <x:String x:Key="Text.Period.Yesterday" xml:space="preserve">Вчера</x:String>
   <x:String x:Key="Text.Period.DaysAgo" xml:space="preserve">{0} дней назад</x:String>
