--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -447,6 +447,7 @@
   <x:String x:Key="Text.Paste" xml:space="preserve">貼上</x:String>
   <x:String x:Key="Text.Period.JustNow" xml:space="preserve">剛剛</x:String>
   <x:String x:Key="Text.Period.MinutesAgo" xml:space="preserve">{0} 分鐘前</x:String>
+  <x:String x:Key="Text.Period.HourAgo" xml:space="preserve">1 小時前</x:String>
   <x:String x:Key="Text.Period.HoursAgo" xml:space="preserve">{0} 小時前</x:String>
   <x:String x:Key="Text.Period.Yesterday" xml:space="preserve">昨天</x:String>
   <x:String x:Key="Text.Period.DaysAgo" xml:space="preserve">{0} 天前</x:String>
