--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -80,10 +80,10 @@
                       <StackPanel Orientation="Vertical">
                         <TextBlock Margin="0,0,0,12" Text="{Binding ToolTip}"/>
                         <Grid ColumnDefinitions="Auto,8,Auto" RowDefinitions="Auto,Auto">
-                          <TextBlock Grid.Row="0" Grid.Column="0" Text="Signer:" IsVisible="{Binding HasSigner}"/>
-                          <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Signer}" IsVisible="{Binding HasSigner}"/>
-                          <TextBlock Grid.Row="1" Grid.Column="0" Text="Key:"/>
-                          <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding Key}"/>
+                          <TextBlock Grid.Row="0" Grid.Column="0" Text="Signer:" IsVisible="{Binding HasSigner}" VerticalAlignment="Center"/>
+                          <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Signer}" IsVisible="{Binding HasSigner}" VerticalAlignment="Center"/>
+                          <TextBlock Grid.Row="1" Grid.Column="0" Text="Key:" VerticalAlignment="Center"/>
+                          <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding Key}" VerticalAlignment="Center"/>
                         </Grid>
                       </StackPanel>
                     </ToolTip.Tip>
