--- a/src/Views/About.axaml
+++ b/src/Views/About.axaml
@@ -3,12 +3,12 @@
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     xmlns:v="using:SourceGit.Views"
-                    mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+                    mc:Ignorable="d" d:DesignWidth="520" d:DesignHeight="230"
                     x:Class="SourceGit.Views.About"
                     x:Name="ThisControl"
                     Icon="/App.ico"
                     Title="{DynamicResource Text.About}"
-                    SizeToContent="WidthAndHeight"
+                    Width="520" Height="230"
                     CanResize="False"
                     WindowStartupLocation="CenterScreen">
   <Grid RowDefinitions="Auto,*">
@@ -34,7 +34,7 @@
                         IsVisible="{OnPlatform True, macOS=False}"/>
     </Grid>
 
-    <Grid Grid.Row="1" ColumnDefinitions="Auto,*">
+    <Grid Grid.Row="1" Height="200" ColumnDefinitions="Auto,Auto">
       <Image Grid.Column="0"
              Width="200" Height="200"
              Margin="8,0"
@@ -42,41 +42,28 @@
              HorizontalAlignment="Center"
              VerticalAlignment="Center"/>
 
-      <StackPanel Grid.Column="1" Orientation="Vertical" Margin="0,8,32,16">
-        <StackPanel Height="48" Orientation="Horizontal">
+      <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center">
+        <StackPanel Height="40" Orientation="Horizontal">
           <TextBlock Classes="bold" Text="SourceGit" FontSize="32" />
           <Border Margin="12,0,0,0" Height="20" CornerRadius="10" Background="{DynamicResource Brush.Accent}" Effect="drop-shadow(0 0 6 #40000000)">
             <TextBlock x:Name="TxtVersion" Classes="primary" Margin="8,0" FontSize="12" Foreground="White"/>
           </Border>
         </StackPanel>
 
-        <TextBlock Margin="2,0,0,0" Text="{DynamicResource Text.About.SubTitle}" FontSize="16"/>
+        <TextBlock Margin="2,4,0,0" Text="{DynamicResource Text.About.SubTitle}" FontSize="16"/>
 
-        <TextBlock x:Name="TxtCopyright" Margin="2,8,0,0" Foreground="{DynamicResource Brush.FG2}"/>
+        <StackPanel Orientation="Horizontal" Margin="0,8,0,0">
+          <Button Width="18" Height="18" Classes="icon_button" Click="OnVisitWebsite" ToolTip.Tip="https://sourcegit-scm.github.io/">
+            <Path Width="16" Height="16" Data="{StaticResource Icons.Remotes}"/>
+          </Button>
 
-        <StackPanel Orientation="Vertical" Margin="0,24,0,0">
-          <StackPanel Orientation="Horizontal" Height="18">
-            <TextBlock Text="{DynamicResource Text.About.BuildWith}" />
-            <TextBlock Text="Avalonia UI" Cursor="Hand" Foreground="{DynamicResource Brush.Accent}" TextDecorations="Underline" PointerPressed="OnVisitAvaloniaUI"/>
-            <TextBlock Text=" &amp; " />
-            <TextBlock Text="AvaloniaEdit" Cursor="Hand" Foreground="{DynamicResource Brush.Accent}" TextDecorations="Underline" PointerPressed="OnVisitAvaloniaEdit"/>
-          </StackPanel>
-
-          <StackPanel Orientation="Horizontal" Height="18" Margin="0,2,0,0">
-            <TextBlock Text="{DynamicResource Text.About.Fonts}" />
-            <TextBlock Text="JetBrains Mono" Cursor="Hand" Foreground="{DynamicResource Brush.Accent}" TextDecorations="Underline" PointerPressed="OnVisitJetBrainsMonoFont"/>
-          </StackPanel>
-
-          <StackPanel Orientation="Horizontal" Height="18" Margin="0,2,0,0">
-            <TextBlock Text="{DynamicResource Text.About.Chart}" />
-            <TextBlock Text="LiveCharts2" Cursor="Hand" Foreground="{DynamicResource Brush.Accent}" TextDecorations="Underline" PointerPressed="OnVisitLiveCharts2"/>
-          </StackPanel>
-
-          <StackPanel Orientation="Horizontal" Height="18" Margin="0,2,0,0">
-            <TextBlock Text="{DynamicResource Text.About.SourceCode}" />
-            <TextBlock Text="Github" Cursor="Hand" Foreground="{DynamicResource Brush.Accent}" TextDecorations="Underline" PointerPressed="OnVisitSourceCode"/>
-          </StackPanel>
+          <Button Width="18" Height="18" Margin="8,0,0,0" Classes="icon_button" Click="OnVisitSourceCode" ToolTip.Tip="https://github.com/sourcegit-scm/sourcegit">
+            <Path Width="16" Height="16" Data="{StaticResource Icons.Github}"/>
+          </Button>
         </StackPanel>
+
+
+        <TextBlock x:Name="TxtCopyright" Margin="0,40,0,0" Foreground="{DynamicResource Brush.FG2}"/>
       </StackPanel>
     </Grid>
   </Grid>
