--- a/src/Views/SelfUpdate.axaml
+++ b/src/Views/SelfUpdate.axaml
@@ -5,7 +5,6 @@
                     xmlns:m="using:SourceGit.Models"
                     xmlns:vm="using:SourceGit.ViewModels"
                     xmlns:v="using:SourceGit.Views"
-                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
                     x:Class="SourceGit.Views.SelfUpdate"
                     x:DataType="vm:SelfUpdate"
@@ -87,14 +86,12 @@
             </StackPanel>
           </DataTemplate>
 
-          <DataTemplate DataType="sys:Exception">
+          <DataTemplate DataType="m:AlreadyUpToDate">
             <StackPanel Orientation="Vertical" Margin="16,8">
-              <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Path Width="14" Height="14" Data="{StaticResource Icons.Error}" Fill="Red"/>
-                <TextBlock Margin="8,0,0,0" FontWeight="Bold" FontSize="14" Text="{DynamicResource Text.SelfUpdate.Error}"/>
+              <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,8">
+                <Path Width="14" Height="14" Data="{StaticResource Icons.Info}" Fill="Green"/>
+                <TextBlock Margin="8,0,0,0" Text="{DynamicResource Text.SelfUpdate.UpToDate}"/>
               </StackPanel>
-
-              <TextBlock Text="{Binding Message}" MaxWidth="500" TextWrapping="Wrap" Margin="0,8"/>
 
               <Button Classes="flat primary"
                       Height="30"
@@ -107,12 +104,14 @@
             </StackPanel>
           </DataTemplate>
 
-          <DataTemplate DataType="m:AlreadyUpToDate">
+          <DataTemplate DataType="m:SelfUpdateFailed">
             <StackPanel Orientation="Vertical" Margin="16,8">
-              <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,8">
-                <Path Width="14" Height="14" Data="{StaticResource Icons.Info}" Fill="Green"/>
-                <TextBlock Margin="8,0,0,0" Text="{DynamicResource Text.SelfUpdate.UpToDate}"/>
+              <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Path Width="14" Height="14" Data="{StaticResource Icons.Error}" Fill="Red"/>
+                <TextBlock Margin="8,0,0,0" FontWeight="Bold" FontSize="14" Text="{DynamicResource Text.SelfUpdate.Error}"/>
               </StackPanel>
+
+              <TextBlock Text="{Binding Reason}" MaxWidth="500" TextWrapping="Wrap" Margin="0,8"/>
 
               <Button Classes="flat primary"
                       Height="30"
